tests/machine/x/java/json_builtin.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsjson_builtin2487153773/001/Main.java:3: error: cannot find symbol
	static Map<Object,Integer> m = new HashMap<>(java.util.Map.of(a, 1, b, 2));
	                                                              ^
  symbol:   variable a
  location: class Main
/tmp/TestCompileValidProgramsjson_builtin2487153773/001/Main.java:3: error: cannot find symbol
	static Map<Object,Integer> m = new HashMap<>(java.util.Map.of(a, 1, b, 2));
	                                                                    ^
  symbol:   variable b
  location: class Main
/tmp/TestCompileValidProgramsjson_builtin2487153773/001/Main.java:5: error: cannot find symbol
	json(m);
	^
  symbol:   method json(Map<Object,Integer>)
  location: class Main
3 errors


  1| let m = {a: 1, b: 2}
  2| json(m)
